# bazel-playground

./: .gitignore  README.md  WORKSPACE.bazel
custom_rules/kotlin/: BUILD.bazel  Compiler.kt  bar.txt  foo.txt  lowercase.txt  rules.bzl
custom_rules/python/: BUILD.bazel  bar.txt  foo.txt  rules.bzl  uppercase_generator.py
custom_rules/shell/: BUILD.bazel  executor.sh  fizzbazz.txt  rules.bzl
java/: BUILD.bazel  Capitalizer.java  lowercase.txt  macros.bzl
python/: BUILD.bazel  FooTest.py  capitalizer.py  foo.py  lowercase.txt  macros.bzl
shell/: BUILD.bazel  macros.bzl  original1.txt  original2.txt
